--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Testimonials</h1>
+	<div class="d1">
+	    <p>This product is amazing</p>
+		<p class="p1">-Jhon Doe</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
